feat: adicionando o about

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 :root{
     --bg-primary:#e5ecff;
+    --light-purple:rgba(36, 79, 195, 0.2);
     --medium-purple:#7166ff;
     --text-primary:#555555;
     --text-secondary: #524f73;
