--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-<app-banner></app-banner>
-<app-cases></app-cases>
-<app-about></app-about>
+<div>
+    <app-header></app-header>
+    <app-banner></app-banner>
+    <app-cases></app-cases>
+    <app-about></app-about>
+    <app-footer></app-footer>
+</div>
