--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,5 +3,6 @@
     <app-banner></app-banner>
     <app-cases></app-cases>
     <app-about></app-about>
+    <app-card></app-card>	
     <app-footer></app-footer>
 </div>
